# lux

./: Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
branches/0.9-dev/: Makefile.in  config.h.in  configure  configure.ac
branches/0.9-dev-old/: README  aclocal.m4  configure.ac
branches/0.9-dev-old/lux/: types.h  util.h
branches/0.9-dev-old/lux/Document/: Document.h  document_definition.pb.cpp  document_definition.pb.h
branches/0.9-dev-old/lux/LangUtil/: LangUtil.h  UTF8Util.h
branches/0.9-dev-old/lux/Lexer/: Lexer.h  Term.h
branches/0.9-dev-old/lux/Storage/: AttrIndex.h  DocStorage.h  DocStorageHash.h  IDManager.h  Normalizer.h  posting.h
branches/0.9-dev-old/lux/StorageEngine/: LIODataUnit.h  QDBMDataUnit.h  StorageEngineUtil.h
branches/0.9-dev-old/lux/StorageInterface/: Condition.h  Engine.h  Paging.h  Searcher.h  document_config_parser.cpp  document_config_parser.h
branches/0.9-dev-old/ptest/: README  blogs.document.conf  index.cpp
branches/0.9-dev/example/: Makefile
branches/0.9-dev/lux/: Makefile.am  Makefile.in  index.h  lux.h  luxconfig.h  scoped_ptr.h  search.h  types.h  util.h
branches/0.9-dev/lux/Document/: DocumentDefinition.h  Field.h  FieldDefinition.h
branches/0.9-dev/lux/Lexer/: MecabMA.cpp
branches/0.9-dev/lux/Query/: PhraseQuery.h
branches/0.9-dev/lux/Storage/: AttrIndexArray.h  BooleanMerger.h  DocStorageArray.h  IndexResult.h  InvertedIndex.cpp  InvertedIndex.h  InvertedIndexCore.h  SearchIndex.h
branches/0.9-dev/lux/StorageEngine/: CuriaHash.h  DepotHash.h  LIOBtree.h  StorageEngine.h
branches/0.9-dev/lux/StorageInterface/: Indexer.cpp  Searcher.cpp  Sorter.h
branches/0.9-dev/lux/api/: batch_indexer-impl.h  batch_indexer.cpp  batch_indexer.h  condition.cpp  condition.h  document_config_parser.h  engine.cpp  engine.h  indexer.cpp  result.h  sorter.h
branches/0.9-dev/lux/document/: document.h  document_definition.pb.cpp  document_definition.pb.h  field.h
branches/0.9-dev/lux/index/: attr_index_array.h  doc_storage.h  id_manager.cpp  id_manager.h  in_memory_index.h  inverted_index.h  normalizer.h  vbc.h
branches/0.9-dev/lux/lexer/: mecab_ma.cpp  term.cpp
branches/0.9-dev/lux/storage/: luxio_array.h  luxio_data_unit.cpp
branches/0.9-dev/test/: k-way-merge-test.cpp
example/: Makefile  README  index.cpp  posts
lux/: Makefile.am  Makefile.in  index.h  lux.h  luxconfig.h  search.h  types.h
lux/Document/: DocumentDefinition.h  DocumentSerializer.h  Field.h  FieldDefinition.h
lux/LangUtil/: UTF8Util.h
lux/Lexer/: .svnignore  Lexer.h  MecabMA.cpp  MecabMA.h  Term.h
lux/Query/: TermQuery.h
lux/Storage/: BooleanMerger.h  DocStorageHash.h  IndexResult.h  InvertedIndex.cpp  Posting.h  SearchIndex.h  vbc.h
lux/StorageEngine/: CuriaHash.h  DataUnit.h  DepotHash.h  LIOArray.h  StorageEngine.h  VillaBtree.h
lux/StorageInterface/: Engine.cpp  Indexer.cpp  Indexer.h  QueryParser.h  Result.h  Searcher.h
lux/api/: batch_indexer.h  condition.h  document_config_parser.cpp  document_config_parser.h  indexer.cpp  indexer.h  paging.h  query_parser.cpp  query_parser.h  searcher.cpp  searcher.h  sorter.h
lux/document/: document.cpp  document_definition.proto  document_serializer.cpp  document_serializer.h  field.h
lux/index/: attr_index.h  doc_storage_array.cpp  doc_storage_array.h  in_memory_index.h  index_result.h  inverted_index_core.h  posting.h  search_index.h  vbc.h
lux/lang/: utf8_util.h
lux/lexer/: mecab_ma.h
lux/query/: boolean_query.cpp  boolean_query.h  phrase_query.cpp  term_query.cpp  term_query.h
lux/storage/: data_unit.h  luxio_btree.cpp
ptest/: Makefile  search.cpp
tags/0.9.1/: Makefile.am  update_protobuf.sh
tags/0.9.1/example/: Makefile  blogs.document.conf  search.cpp
tags/0.9.1/lux/: Makefile.in
tags/0.9.1/lux/api/: engine-impl.h  engine.h  paging.cpp  result.cpp  result.h  searcher.h
tags/0.9.1/lux/index/: attr_index_array.cpp  boolean_merger.h  inverted_index.cpp  posting.h
tags/0.9.1/lux/lang/: lang_util.h  utf8_util.cpp
tags/0.9.1/lux/lexer/: lexer.h  term.h
tags/0.9.1/lux/query/: phrase_query.h  query.h
tags/0.9.1/lux/storage/: luxio_array.cpp  luxio_btree.h  luxio_data_unit.h  storage_engine.h
trunk/: Makefile.in
trunk/example/: search.cpp
trunk/lux/: search.h
trunk/lux/Document/: Document.h
trunk/lux/LangUtil/: LangUtil.h
trunk/lux/Lexer/: MecabMA.h
trunk/lux/Query/: BooleanQuery.h  Query.h
trunk/lux/Storage/: DocStorage.h  InvertedIndex.h  InvertedIndexCore.h
trunk/lux/StorageEngine/: DataUnit.h
trunk/lux/StorageInterface/: Condition.h  Searcher.cpp  Sorter.h
